--- a/less/custom.less
+++ b/less/custom.less
@@ -109,9 +109,7 @@ body {
       background-position: -27px 0px;
     }
 
-    .youtube-btn {
-      background-position: -54px 0px;
-    }
+    .youtube-btn {      background-position: -54px 0px;    }
   }
 }
 
