--- a/less/updates.less
+++ b/less/updates.less
@@ -58,6 +58,12 @@
 
   }
 
+  .veja-mais-videos {
+    margin-top: -20px;
+    //margin-right: 15px;
+    font-size: 12px;
+
+  }
 }
 
 #de-olho-na-cidade-interna:extend(#de-olho-na-cidade-home all) {
@@ -78,5 +84,17 @@
     background: black !important;
     opacity: 0.7;
 
+  }
+}
+
+#fale-com-a-cei {
+  button {
+    width: 100%;
+  }
+}
+
+.noticia-detalhe {
+  img {
+    margin-bottom: 10px;
   }
 }
